@@ -17,7 +17,7 @@
 	<form action="###FORM.ACTION###" class="ajaxForm" method="post" enctype="multipart/form-data">
 		<dl>
 			<dt>###LLL:creategroup_title###</dt>
-			<dd><input type="text" name="tx_community[group_title]" value="" /></dd>
+			<dd><input type="text" name="tx_community[groupName]" value="" /></dd>
 		</dl>
 		<input type="submit" value="###LLL:creategroup_formSave###" />
 	</form>
